Resume update - GSN

--- a/index.html
+++ b/index.html
@@ -297,10 +297,9 @@
             </div>
         </div>
         <br>
-        <h3 style="text-align:center">
-            Intern / Student Projects:
-        </h3>
-
+        <!--<h3 style="text-align:center">
+           Other Projects:
+        </h3>-->
         <div class="well well-lg">
             <div style="margin-left:10px">
                 <div class="row">
@@ -335,65 +334,7 @@
             </div>
         </div>
         <br>
-        <div class="well well-lg">
-            <div style="margin-left:10px">
-                <div class="row">
-                    <div class="col-lg-6 centered">
-                        <br>
-                        <img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/PLACCO/PLACCO-bg.jpg" alt="" />
-                    </div>
-                    <div class="col-lg-6 left">
-                        <div style="margin-left:10px">
-                            <h3 style="text-align:center">
-                                PLACCO<br>
-                            </h3>
-                            <h4 style="text-align:center">
-                                Universidad Nacional de Colombia
-                            </h4>
-                            <hr />
-                            <h5>
-                                Student Research Assistant / Gameplay Programmer <br><br>
-                            </h5>
-
-                            PLACCO (Ludic Online Platform of Collective Learning and Construction) for it's acronym in Spanish is a massive multiplayer online videogame established in a 3D world,
-                            in which teachers can set courses and follow their student's progress through the use of funny mini-games,
-                            educative material and with a collective construction of an alive changing virtual world in which it develops.
-                            <br>
-                            <br>
-                            <ul>
-                                <li><a href="http://link.springer.com/chapter/10.1007/978-3-319-19033-4_29">Research and Paper publication (Springer).</a></li>
-                                <li>Wrote PHP scripts and SQL queries to setup database connectivity within the game.</li>
-                                <li>
-                                    Developed an <a href="assets/img/ProfessionalProjects/PLACCO/PLACCO-Chat.gif" target="_blank">In-game Chat (image).</a>
-                                </li>
-                                <li>
-                                    Programmed the <a href="assets/img/ProfessionalProjects/PLACCO/PLACCO-Login.gif" target="_blank">Login and Signup modules (image).</a>
-                                </li>
-                            </ul>
-
-                            <br><b>Tools:</b><br>
-                            Unity, C#, PHP, SQL/PLSQL<br><br>
-                        </div>
-                    </div>
-                </div>
-             </div>
         </div>
-        </div><!-- /row -->
-        <!--<div class="row mt centered">
-            <div class="col-lg-4">
-                <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port04.jpg" alt="" /></a>
-                <p>YODA</p>
-            </div>
-            <div class="col-lg-4">
-                <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port05.jpg" alt="" /></a>
-                <p>EMPERORS</p>
-            </div>
-            <div class="col-lg-4">
-                <a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port06.jpg" alt="" /></a>
-                <p>CHIEFS</p>
-            </div>
-        </div><!-- /row -->
-    <!-- /container -->
         <!-- +++++ Footer Section +++++ -->
 
         <div id="footer">
