Resume and about links and labels updates

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/">Professional Projects</a></li>
                         <li><a href="personalwork.html">Personal Projects</a></li>
-                        <li><a href="resume.html">Resume</a></li>
+                        <li><a href="resume.html">Résumé</a></li>
                         <li><a href="about.html">About</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
