--- a/resume.html
+++ b/resume.html
@@ -75,7 +75,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/">Professional Projects</a></li>
                         <li><a href="personalwork.html">Personal Projects</a></li>
-                        <li><a href="resume.html">Resume</a></li>
+                        <li><a href="resume.html">Résumé</a></li>
                         <li><a href="about.html">About</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -90,13 +90,12 @@
 
         <div class="row mt">
             <div class="col-lg-10 col-lg-offset-1">
-                <h4>Resume - English</h4>
+                <h4>Résumé</h4>
                 <a href="assets/documents/Santiago_Alvarez_Resume_en.pdf" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/Others/pdf.png" alt="" /></a>
                 <a href="assets/documents/Santiago_Alvarez_Resume_en.docx" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/Others/word.png" alt="" /></a>
                 <br />
 
                 <hr>
-                <h4>Resume</h4>
                 <a href="assets/img/Others/resume1.jpg" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/Others/resume1.jpg" alt="" /></a>
             </div>
         </div>
