--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/">Professional Projects</a></li>
                         <li><a href="personalwork.html">Personal Projects</a></li>
-                        <li><a href="resume.html">Resume</a></li>
+                        <li><a href="resume.html">Résumé</a></li>
                         <li><a href="about.html">About</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -91,21 +91,19 @@
                     <img src="assets/img/Others/profile/sa_small.png" alt="">
                     <h1>Hi. I'm Santiago.</h1>
                     <p>
-                        I'm currently working as a game developer at <a href="http://www.timba.co/" target="_blank">Timba Games</a> (Full Time - Onsite).
-                        I have previously worked in the same role at <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a> (Full Time - Remote) and
-                        <a href="http://www.arbolabc.com/" target="_blank">Rainbow Tree Inc</a> (Full Time - Onsite), also,                        
-                        I earned a Bachelor Degree on Systems Engineering at <a href="http://unal.edu.co/" target="_blank">Universidad Nacional of Colombia.</a>
+                        I'm currently working as a game developer at <a href="https://gsngames.com" target="_blank">GSN Games</a> (Contract - Remote), I'm a former <a href="http://www.timba.co/" target="_blank">Timba Games</a> developer (Full Time - Onsite). I have also previously worked in the same role at <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a> (Full Time - Remote) and <a href="http://www.arbolabc.com/" target="_blank">Rainbow Tree Inc</a> (Full Time - Onsite), also,                        
+                        I earned a Bachelor's Degree in Software Engineering at <a href="http://unal.edu.co/" target="_blank">Universidad Nacional of Colombia.</a>
                     </p>
                     <p>
-                        I enjoy a lot doing and playing games, is my passion, however, I also enjoy doing a lot of other stuff, like learning,
-                        I'm always reading and searching for stuff, any kind of stuff, from video game development through dark matter and even how to construct a potato clock.
+                        I enjoy a lot doing and playing games, is my passion, however, I also enjoy doing a lot of other stuff,
+                        I'm always reading and searching for stuff, any kind of stuff, from video game development to dark matter and even how to construct a potato clock.
                         The more you know, the more you can create.<br><br>
                         I also strongly believe that creativeness is the spark for anything I ever wished to do, that's why I like to spend some time taking photographs and playing the piano.
                         <br><br>
                         But not only I enjoy learning, I also believe in helping others, that's why I used to teach at the Universidad Nacional,
                         specifically in Game Design and Development in Unity.<br>
                         Also, I helped with the foundation and rising of "InterAction", a forum of game development (Now an official Unity User Group) opened to all the community in the local industry of video games in Medellín.
-                        <br>You can join us at the <a href="http://www.meetup.com/Desarrollo-de-Videojuegos-en-Medellin/">InterAction Meetup Page</a> or in our <a href="https://www.facebook.com/groups/InterActionforo">Facebook Group</a>
+                        <br>You can join us at the <a href="http://www.meetup.com/Desarrollo-de-Videojuegos-en-Medellin/">InterAction Meetup Page</a> or in our <a href="https://www.facebook.com/groups/interactionmedellin/">Facebook Group</a>
                         <br><br>
                         Finally, but not least, I also like to experience, live and know new places, cultures, people and everything that can teach me more about the world and the people living in it, after all, we are making games for them, isn't it?
                     </p>
