personal work div fix

--- a/personalwork.html
+++ b/personalwork.html
@@ -139,7 +139,7 @@
 
             </div><!-- /row -->
 
-            <div class="row mt centered">
+        <div class="row mt centered">
 
             <div class="col-lg-4">
                 <div class="col-sm-pull-0">
@@ -172,9 +172,9 @@
                 <br>
             </div>
 
-            </div><!-- /row -->
+        </div><!-- /row -->
 
-            <div class="row mt centered"> 
+        <div class="row mt centered"> 
 
             <div class="col-lg-4">
                 <div class="col-sm-pull-0">
@@ -207,8 +207,9 @@
             </div>
 
         </div><!-- /row -->
+    </div><!-- /container -->
 
-        <div class="row mt centered">
+    <div class="row mt centered">
 
     </div><!-- /container -->
     <div id="blueimp-gallery" class="blueimp-gallery">
