Fix galleria url

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						ga('create', 'UA-25088177-2', 'auto');
 						ga('send', 'pageview');
         </script>
-        <script src="assets/js/galleria/galleria-1.5.7.min.js/"></script>
+        <script src="js/galleria-1.5.7.min.js/"></script>
         <script src="assets/js/galleria/themes/classic/galleria.classic.min.js" async="async"></script>
     </head>
 	<body class="is-preload">
