Fixes to Safari flex layout

--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
                                     I'm a Software Engineer who has dedicated his career to Game Programming.
 
                                     <br><br><b>Experience</b>
-                                    <br>3+ years of professional game programming experience
-                                    <br>3+ years of experience using Unity / C# in different shipped titles
-                                    <br>A year of professional experience developing games in HTML5, Javascript and Phaser
+                                    <br>&#8226; 3+ years of professional game programming experience.
+                                    <br>&#8226; 3+ years of experience using Unity / C# in different shipped titles.
+                                    <br>&#8226; A year of professional experience developing games in HTML5, Javascript and Phaser.
 
                                     <br><br><b>Shipped Titles:</b>
-                                    <br><a href="#puppetAnchor" class="name">Puppet Kings - Timba Games (Credited).</a>
-                                    <br><a href="#moanaAnchor" class="name">Moana: Rhythm Run - Disney Interactive (Credited).</a>
-                                    <br><a href="#rainbowAnchor" class="name">30+ different web games for the arbolabc.com games portal.</a>
+                                    <br>&#8226; <a href="#puppetAnchor" class="name">Puppet Kings - Timba Games (Credited).</a>
+                                    <br>&#8226; <a href="#moanaAnchor" class="name">Moana: Rhythm Run - Disney Interactive (Credited).</a>
+                                    <br>&#8226; <a href="#rainbowAnchor" class="name">30+ different web games for the arbolabc.com games portal.</a>
 
                                     <br><br>I'm currently looking for job opportunities, and I would be happy to relocate myself.
                                 </p>
@@ -328,15 +328,16 @@
                                     <div class="title">
                                         <h2>Contact</h2>
                                         <h3>
-                                            Feel free to reach me at:  <a href="mailto:saalvarezva@gmail.com" target="_blank">saalvarezva@gmail.com<br></a>
-                                            or through LinkedIn at: <a href="http://www.linkedin.com/in/pulpobot" target="_blank">http://www.linkedin.com/in/pulpobot</a>
+                                            Feel free to reach me at:  <a href="mailto:saalvarezva@gmail.com" target="_blank" style="overflow-wrap: break-word";>saalvarezva@gmail.com<br></a>
+                                        or through LinkedIn at:</a>
+                                        <a href="http://www.linkedin.com/in/pulpobot" class="colored" target="_blank" style="overflow-wrap: break-word">http://www.linkedin.com/in/pulpobot </a>
                                         </h3>
                                     </div>
                                 </header>
                                 <!--col by default for sizes larger than 1280 or so, large is ipad pro, medium is ipad, small is iphone-->
                                 <div class="row">
                                     <div class="col-6 col-12-large col-12-medium col-12-small resume">
-                                        <p ">
+                                        <p>
                                             I'm currently working as a Software Engineer at <a class="colored" href="https://gsngames.com" target="_blank">GSN Games</a> (Contract - Remote).
                                             <br><br>
                                             I earned a Bachelor's Degree in Software Engineering at <a class="colored" href="http://unal.edu.co/" target="_blank">Universidad Nacional of Colombia.</a>
