--- a/personal/index.html
+++ b/personal/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 
-<a href="cooking/cookbook.html">Cookbook</a>
+<ul>
+    <li><h1><a href="cooking/cookbook.html">Recetas</a></h1></li>
+    <li><h1><a href="cooking/handyman.html">Reparaciones</a></h1></li>
+</ul>
 </body>
 </html>
