Added recommended places section and nachos receipt

--- a/personal/handyman.html
+++ b/personal/handyman.html
@@ -5,7 +5,7 @@
     <title>Handyman</title>
 </head>
 <body>
-<h3><a href="../"><- Regresar</a></h3>
+<h3><a href="../personal"><- Regresar</a></h3>
 <h1>Reparaciones</h1>
 <ul>
     <li><a href="#destapatuberias">Destapar Tuberias</a></li>
