--- a/personal/index.html
+++ b/personal/index.html
@@ -7,8 +7,9 @@
 <body>
 
 <ul>
-    <li><h1><a href="cooking/cookbook.html">Recetas</a></h1></li>
-    <li><h1><a href="cooking/handyman.html">Reparaciones</a></h1></li>
+    <li><h1><a href="cookbook.html">Recetas</a></h1></li>
+    <li><h1><a href="handyman.html">Reparaciones</a></h1></li>
+    <li><h1><a href="places.html">Sitios Recomendados</a></h1></li>
 </ul>
 </body>
 </html>
