--- a/personal/cookbook.html
+++ b/personal/cookbook.html
@@ -8,10 +8,47 @@
 <h3><a href="../personal"><- Regresar</a></h3>
 <h1>Recetas</h1>
 <ul>
+    <li><a href="#frijoles">Frijoles</a></li>
     <li><a href="#carnehamburguesa">Carne de Hamburguesa</a></li>
     <li><a href="#nachosdip">Nachos - Dip Frijoles y Carne</a></li>
     <li><a href="#picogallo">Pico de Gallo</a></li>
 </ul>
+<h2><a name="frijoles"></a>Frijoles</h2>
+<h3>Ingredientes (4 porciones)</h3>
+<ul>
+    <li>Frijoles: 1 taza</li>
+    <li>Zanahoria: 1</li>
+    <li>Yuca: 1 o 2 porciones pequeñas</li>
+    <li>Salsa de Tomate: 1 cucharada</li>
+    <li>Vinagre: 1 cucharada</li>
+    <li>Chorizos: 2</li>
+    <li>Cubo de caldo de gallina: 1</li>
+    <li>Crema de chocolo: 1 cucharada</li>
+    <li>sal: 1 cucharadita</li>
+    <li>Hogao:
+        <ul>
+            <li>2 tomates</li>
+            <li>1/2 cebolla</li>
+            <li>cilantro</li>
+        </ul>
+    </li>
+</ul>
+<h3>Proceso</h3>
+<p>El dia anterior, lavar los frijoles y ponerlos en agua, suficiente que se tapen todos.</p>
+<p>Al día siguiente, cocinarlos en la olla a presión con la zanahoria y las yucas. Cuando estén blanditos (maso 30 minutos mas tarde),
+    sacar la zanahoria, las yucas y un poquito del caldito de agua en la licuadora, agregarle una cucharada de salsa de tomate,
+    una cucharada de vinagre, una cucharada de crema de chocolo, un cubo de caldo de gallina y una cucharadita de sal, licuar todo.
+</p>
+<p>Echar la mezcla a los frijoles y los chorizos picados en rodajas, mezclar, cocinar a fuego lento hasta que espesen. Cuando estén listos
+    echar el hogao y dejar 5 minutos mezclando.
+</p>
+<p>Para los chicharrones, dejarlos remojar en agua con una cucharadita de bicarbonato por 5-10 minutos y luego poner en la freidora.
+    Empezar a cocción lenta hasta que se cocinen bien por dentro y luego subir la temperatura para que queden tostaditos.
+</p>
+
+
+<p>-----------------------------------------------------------------------------------------------------------------------------</p>
+
 <h2><a name="carnehamburguesa"></a>Carne de Hamburguesa</h2>
 <h3>Ingredientes (para 1 kilo de carne)</h3>
 <ul>
