Added a delay to the redirect

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="7; url='www.linkedin.com/in/pulpobot'" />
+    <title>LinkedIn</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="3; URL=https://www.linkedin.com/in/pulpobot" />
 </head>
 <body>
-    <p>Please follow <a href="www.linkedin.com/in/pulpobot">this link</a>.</p>
+    <p>You can find my CV and Portfolio at: linkedin.com/in/pulpobot. If you are not redirected within 3 seconds, please click <a href="https://www.linkedin.com/in/pulpobot">here</a></p>
 </body>
 </html>
